--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["tarkah <admin@tarkah.dev>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+ajour-core = { git="https://github.com/casperstorm/ajour", rev="06848b955f4c7eb48b4950309673a58689979acb" }
+anyhow = "1"
+async-std = { version = "1.7", features = ["attributes"] }
+futures = "0.3"
+isahc = { version = "0.9", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
